cmake_minimum_required(VERSION 3.23)
project(tcpl C)

set(CMAKE_C_STANDARD 99)

add_executable(tcpl main.c)
add_executable(tcpl_ch01_16 ch01/1-16.c)
add_executable(tcpl_ch01_17 ch01/1-17.c)
add_executable(tcpl_ch01_18 ch01/1-18.c)
add_executable(tcpl_ch01_19 ch01/1-19.c)
add_executable(tcpl_ch01_20 ch01/1-20.c)
add_executable(tcpl_ch01_21 ch01/1-21.c)
add_executable(tcpl_ch01_22 ch01/1-22.c)
add_executable(tcpl_ch01_23 ch01/1-23.c)

add_executable(tcpl_ch02_1 ch02/2-1.c)
add_executable(tcpl_ch02_p30 ch02/p30.c)
add_executable(tcpl_ch02_3 ch02/2-3.c)
add_executable(tcpl_ch02_8 ch02/2-8.c)
