cmake_minimum_required(VERSION 3.23)
project(tcpl C)

set(CMAKE_C_STANDARD 99)

add_executable(tcpl main.c)
add_executable(tcpl_ch01_16 ch01/1-16.c)
add_executable(tcpl_ch01_17 ch01/1-17.c)
add_executable(tcpl_ch01_18 ch01/1-18.c)
add_executable(tcpl_ch01_19 ch01/1-19.c)
add_executable(tcpl_ch01_20 ch01/1-20.c)
add_executable(tcpl_ch01_21 ch01/1-21.c)
add_executable(tcpl_ch01_22 ch01/1-22.c)
add_executable(tcpl_ch01_23 ch01/1-23.c)

add_executable(tcpl_ch02_1 ch02/2-1.c)
add_executable(tcpl_ch02_p30 ch02/p30.c)
add_executable(tcpl_ch02_3 ch02/2-3.c)
add_executable(tcpl_ch02_8 ch02/2-8.c)
add_executable(tcpl_ch02_9 ch02/2-9.c)
add_executable(tcpl_ch02_10 ch02/2-10.c)

add_executable(tcpl_ch03_p48 ch03/p48.c)
add_executable(tcpl_ch03_2 ch03/3-2.c)
add_executable(tcpl_ch03_4 ch03/3-4.c)
add_executable(tcpl_ch03_5 ch03/3-5.c)

add_executable(tcpl_ch04_p58 ch04/p58.c)
add_executable(tcpl_ch04_p60 ch04/p60.c)
add_executable(tcpl_ch04_2 ch04/4-2.c)
add_executable(tcpl_ch04_p64 ch04/p64.c)
add_executable(tcpl_ch04_3 ch04/4-3.c)
add_executable(tcpl_ch04_4 ch04/4-4.c)
add_executable(tcpl_ch04_p74 ch04/p74.c)
add_executable(tcpl_ch04_12 ch04/4-12.c)
add_executable(tcpl_ch04_13 ch04/4-13.c)
add_executable(tcpl_ch04_14 ch04/4-14.c)

add_executable(tcpl_ch05_p85 ch05/p85.c)
add_executable(tcpl_ch05_3 ch05/5-3.c)
add_executable(tcpl_ch05_4 ch05/5-4.c)
add_executable(tcpl_ch05_p95 ch05/p95.c)
add_executable(tcpl_ch05_9 ch05/5-9.c)
add_executable(tcpl_ch05_p99 ch05/p99.c)
